--- a/public/stylesheets/crud.css
+++ b/public/stylesheets/crud.css
@@ -1,340 +1,343 @@
-/** Administration area **/
+/* Add additional stylesheets below
+-------------------------------------------------- */
 
-#crud {
-	margin: 0;
-	padding: 0;
-	font-family: 'Helvetica', 'Arial', 'Sans';
-	font-size: 90%;
-	color: #111;
+.redtext {
+    color: #DD4B39;
 }
 
-/** Header **/
-
-#crud #crudHeader {
-	background: #111111;
-	padding: 10px 20px;
+img {
+    width: 1000px;
+    max-width: 100%;
 }
 
-#crud #crudHeader h1 {
-	margin: 0;
-	font-weight: normal;
+a.label-unselected:hover {
+    text-decoration: none;
+    cursor: pointer;
+    color:grey;
 }
 
-#crud #crudHeader h1 a {
-	color: gold;
-	text-decoration: none;
+
+.label-unselected {
+    background-color: #F0F0F0;
+    color:grey;
 }
 
-/** Breadcrumb **/
-
-#crudBreadcrumb {
-	padding: 5px 20px;
-	font-size: 80%;
-	border-bottom: 1px solid #ddd;
-}
-
-#crudBreadcrumb ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-#crudBreadcrumb li {
-	display: inline;
-}
-
-#crudBreadcrumb a {
-	color: #333;
-}
-
-#crudBreadcrumb li:last-child a {
-	color: #888;
-	text-decoration: none;
-}
-
-/** Flash message **/
-
-.crudFlash {
-	padding: 5px 20px;
-	border-bottom: 1px solid #ddd;
-	color: #fff;
-}
-
-.flashError {
-	background: #c00;
-}
-
-.flashSuccess {
-	background: #54BD06;
-}
-
-/** Content **/
-
-#crud #crudContent {
-	padding: 10px 20px;
-}
-
-#crud #crudContent h2 {
-	color: #333;
-	font-weight: normal;
-	margin-top: 10px;
-}
-
-#crud #crudContent a {
-	color: #444;
-}
-
-/** Tables **/
-
-#crud #crudContent table {
-	width: 100%;
-	border: 1px solid #ddd;
-	border-top: none;
-	border-collapse: collapse;
-	table-layout: fixed;
-}
-
-#crud #crudContent table thead tr {
-	background: #0A65AF;
-}
-
-#crud #crudContent table th {
-	color: #fff;
-	font-weight: bold;
-}
-
-#crud #crudContent table th a {
-	color: #fff;
-	font-weight: bold;
-}
-
-#crud #crudContent table th {
-	text-align: left;
-	padding: 6px 5px;
-}
-
-#crud #crudContent table td {
-	text-align: left;
-	padding: 4px 5px;
-}
-
-#crud #crudContent table td {
-	border-bottom: 1px solid #eee;
-}
-
-#crud #crudContent table tr.even {
-	background: #f9f9f9;
-}
-
-#crud #crudContent table tr:last-child td {
-	border-bottom: 1px solid #ddd;
-}
+/*
+  Newsarchi documentation styles
+*/
 
 .crudSortedAsc:after {
-	content: '▼';
+    content: '▼';
 }
 
 .crudSortedDesc:after {
-	content: '▲';
+    content: '▲';
 }
 
-/** Forms **/
-
-form {
-	margin: 0;
+/* Subnav */
+.subnav {
+  width: 100%;
+  height: 36px;
+  background-color: #eeeeee; /* Old browsers */
+  background-repeat: repeat-x; /* Repeat the gradient */
+  background-image: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#eeeeee)); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Chrome 10+,Safari 5.1+ */
+  background-image: -ms-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* IE10+ */
+  background-image: -o-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Opera 11.10+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
+  background-image: linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* W3C */
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+.subnav .nav {
+  margin-bottom: 0;
+}
+.subnav .nav > li > a {
+  margin: 0;
+  padding-top:    11px;
+  padding-bottom: 11px;
+  border-left: 1px solid #f5f5f5;
+  border-right: 1px solid #e5e5e5;
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+}
+.subnav .nav > .active > a,
+.subnav .nav > .active > a:hover {
+  padding-left: 13px;
+  color: #777;
+  background-color: #e9e9e9;
+  border-right-color: #ddd;
+  border-left: 0;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
+     -moz-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
+          box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
+}
+.subnav .nav > .active > a .caret,
+.subnav .nav > .active > a:hover .caret {
+  border-top-color: #777;
+}
+.subnav .nav > li:first-child > a,
+.subnav .nav > li:first-child > a:hover {
+  border-left: 0;
+  padding-left: 12px;
+  -webkit-border-radius: 4px 0 0 4px;
+     -moz-border-radius: 4px 0 0 4px;
+          border-radius: 4px 0 0 4px;
+}
+.subnav .nav > li:last-child > a {
+  border-right: 0;
+}
+.subnav .dropdown-menu {
+  -webkit-border-radius: 0 0 4px 4px;
+     -moz-border-radius: 0 0 4px 4px;
+          border-radius: 0 0 4px 4px;
 }
 
-input, textarea, select {
-	font-family: 'Helvetica', 'Arial', 'Sans';
-	font-size: 12px;
+/* Fixed subnav on scroll, but only for 980px and up (sorry IE!) */
+@media (min-width: 980px) {
+  .subnav-fixed {
+    position: fixed;
+    top: 40px;
+    left: 0;
+    right: 0;
+    z-index: 1020; /* 10 less than .navbar-fixed to prevent any overlap */
+    border-color: #d5d5d5;
+    border-width: 0 0 1px; /* drop the border on the fixed edges */
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
+    -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+       -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+            box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false); /* IE6-9 */
+  }
+  .subnav-fixed .nav {
+    width: 938px;
+    margin: 0 auto;
+    padding: 0 1px;
+  }
+  .subnav .nav > li:first-child > a,
+  .subnav .nav > li:first-child > a:hover {
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
+  }
 }
 
-textarea {
-	padding: 2px;
-}
 
-.objectForm {
-	border: 1px solid #ddd;
-}
 
-label {
-	display: block;
-	font-weight: bold;
-	width: 20%;
-	float: left;
-	color: #666;
-	cursor: pointer;
-}
+/* Responsive Docs
+-------------------------------------------------- */
+@media (max-width: 480px) {
 
-.crudField {
-	padding: 10px;
-	border-bottom: 1px solid #eee;
-	position: relative;
-}
+  /* Reduce padding above jumbotron */
+  body {
+    padding-top: 70px;
+  }
 
-.crud_hidden {
-    display: none;
-}
-
-.crudButtons {
-	background: #efefef;
-	text-align: right;
-	margin: 0;
-	padding: 10px;
-}
-
-.crudField .error {
-	color: #c00;
-	padding-left: 10px;
-	position: absolute;
-	top: 15px;
-	font-size: 80%;
-}
-
-.crudField .hasError {
-	color: #c00;
-}
-
-.crudField select[multiple] {
-	max-height: 100px;
-}
-
-.crudField .crudHelp {
-	font-size: 70%;
-	color: #888;
-	display: block;
-	margin-left: 20%;
-	margin-top: 5px;
-}
-
-form .currentAttachment {
-	display: block;
-	font-size: 80%;
-	margin-left: 20%;
-	padding-top: 4px;
-}
-
-form .removeAttachment {
+  /* Change up some type stuff */
+  h2 {
+    margin-top: 27px;
+  }
+  h2 small {
     display: block;
-    font-size: 80%;
-    margin-left: 20%;
+    line-height: 18px;
+  }
+  h3 {
+    margin-top: 18px;
+  }
+
+  /* Adjust the jumbotron */
+  .jumbotron h1,
+  .jumbotron p {
+    text-align: center;
+    margin-right: 0;
+  }
+  .jumbotron h1 {
+    font-size: 45px;
+    margin-right: 0;
+  }
+  .jumbotron p {
+    margin-right: 0;
+    margin-left: 0;
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .jumbotron .btn {
+    display: block;
+    font-size: 18px;
+    padding: 10px 14px;
+    margin: 0 auto 10px;
+  }
+  /* Masthead (home page jumbotron) */
+  .masthead {
+    padding-top: 0;
+  }
+
+  /* Don't space out quick links so much */
+  .quick-links {
+    margin: 40px 0 0;
+  }
+  /* hide the bullets on mobile since our horizontal space is limited */
+  .quick-links .divider {
+    display: none;
+  }
+
+  /* center example sites */
+  .example-sites {
+    margin-left: 0;
+  }
+  .example-sites > li {
+    float: none;
+    display: block;
+    max-width: 280px;
+    margin: 0 auto 18px;
+    text-align: center;
+  }
+  .example-sites .thumbnail > img {
+    max-width: 270px;
+  }
+
+  table code {
+    white-space: normal;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
+
+  /* Modal example */
+  .modal-example .modal {
+    position: relative;
+    top: auto;
+    right: auto;
+    bottom: auto;
+    left: auto;
+  }
+
 }
 
-/** Footer **/
 
-#crud #crudFooter {
-	font-size: 80%;
-	color: #aaa;
-	padding: 10px 20px;
-	border-top: 1px dashed #ccc;
-	border-bottom: 1px dashed #ccc;
-	margin-top: 20px;
+@media (max-width: 768px) {
+
+  /* Remove any padding from the body */
+  body {
+    padding-top: 0;
+  }
+
+  /* Jumbotron buttons */
+  .jumbotron .btn {
+    margin-bottom: 10px;
+  }
+
+  /* Subnav */
+  .subnav {
+    position: static;
+    top: auto;
+    z-index: auto;
+    width: auto;
+    height: auto;
+    background: #fff; /* whole background property since we use a background-image for gradient */
+    -webkit-box-shadow: none;
+       -moz-box-shadow: none;
+            box-shadow: none;
+  }
+  .subnav .nav > li {
+    float: none;
+  }
+  .subnav .nav > li > a {
+    border: 0;
+  }
+  .subnav .nav > li + li > a {
+    border-top: 1px solid #e5e5e5;
+  }
+  .subnav .nav > li:first-child > a,
+  .subnav .nav > li:first-child > a:hover {
+      -webkit-border-radius: 4px 4px 0 0;
+         -moz-border-radius: 4px 4px 0 0;
+              border-radius: 4px 4px 0 0;
+  }
+
+  /* Popovers */
+  .large-bird {
+    display: none;
+  }
+  .popover-well .popover-wrapper {
+    margin-left: 0;
+  }
+
+  /* Space out the show-grid examples */
+  .show-grid [class*="span"] {
+    margin-bottom: 5px;
+  }
+
+  /* Unfloat the back to top link in footer */
+  .footer .pull-right {
+    float: none;
+  }
+  .footer p {
+    margin-bottom: 9px;
+  }
+
 }
 
-#crud #crudFooter a {
-	color: #333;
+
+@media (min-width: 480px) and (max-width: 768px) {
+
+  /* Scale down the jumbotron content */
+  .jumbotron h1 {
+    font-size: 54px;
+  }
+  .jumbotron p {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
 }
 
-/** Home **/
 
-.crudNew {
-	text-align: right !important;
+@media (min-width: 768px) and (max-width: 980px) {
+
+  /* Remove any padding from the body */
+  body {
+    padding-top: 0;
+  }
+
+  /* Scale down the jumbotron content */
+  .jumbotron h1 {
+    font-size: 72px;
+  }
+
 }
 
-.crudNew a {
-	background: #54BD06;
-	padding: 2px 10px;
-	font-size: 90%;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	color: #fff !important;
-	text-decoration: none;
+
+@media (max-width: 980px) {
+
+  /* Unfloat brand */
+  .navbar-fixed-top .brand {
+    float: left;
+    margin-left: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  /* Inline-block quick links for more spacing */
+  .quick-links li {
+    display: inline-block;
+    margin: 5px;
+  }
+
 }
 
-.crudNew a:hover {
-	opacity: .8;
-}
 
-/** List **/
+/* LARGE DESKTOP SCREENS */
+@media (min-width: 1210px) {
 
-#crudList {
-	position: relative;
-}
+  /* Update subnav container */
+  .subnav-fixed .nav {
+    width: 1168px; /* 2px less to account for left/right borders being removed when in fixed mode */
+  }
 
-#crudListAdd a {
-	margin: 0;
-	position: absolute;
-	top: 0;
-	right: 0;
-	background: #54BD06;
-	padding: 3px 10px;
-	font-size: 90%;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	color: #fff !important;
-	text-decoration: none;
-}
-
-#crudListAdd a:hover {
-	opacity: .8;
-}
-
-#crudListSearch {
-	padding: 4px 5px;
-	border: 1px solid #ddd;
-	background: #efefef;
-}
-
-#crudListSearch input[type=text] {
-	width: 40%;
-}
-
-#crudListSearch a {
-	color: #111 !important;
-	font-size: 90%;
-}
-
-#crudListPagination {
-	padding: 4px 5px;
-	border: 1px solid #ddd;
-	background: #efefef;
-	border-top: 0;
-	font-size: 90%;
-	position: relative;
-}
-
-#crudListPagination .crudCount {
-	margin: 0;
-}
-
-#crudListPagination .crudPages {
-	margin: 0;
-	position: absolute;
-	right: 5px;
-	top: 4px;
-}
-
-/** Show **/
-
-#crudShow {
-	position: relative;
-}
-
-.crudDelete input {
-	color: #fff;
-	border: none;
-	margin: 0;
-	position: absolute;
-	top: 0;
-	right: 0;
-	background: #c00;
-	padding: 2px 10px;
-	font-size: 90%;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	cursor: pointer;
-}
-
-.crudDelete input:hover {
-	opacity: .7;
 }
