manage the index page

--- a/app/views/CRUD/blank.html
+++ b/app/views/CRUD/blank.html
@@ -1,4 +1,4 @@
-#{extends 'CRUD/layout.html' /}
+#{extends 'CRUD/layoutWithTitle.html' /}
 
 #{form action:@create(), enctype:'multipart/form-data', class:'form form-horizontal'}
     #{crud.form /}
