--- a/app/views/CRUD/show.html
+++ b/app/views/CRUD/show.html
@@ -1,4 +1,4 @@
-#{extends 'CRUD/layout.html' /}
+#{extends 'CRUD/layoutWithTitle.html' /}
 
 #{form action:@save(object._key()), enctype:'multipart/form-data', class:'form form-horizontal'}
     #{crud.form /}
