--- a/app/views/tags/crud/crudMenuLinkDisplay.html
+++ b/app/views/tags/crud/crudMenuLinkDisplay.html
@@ -1,3 +1,3 @@
-<li class="${request.controller == _actionName ? 'active' : ''}">
+<li class="${request.controller == _actionName && request.actionMethod != 'index' ? 'active' : ''}">
     <a href="/admin/${_actionName?.toLowerCase()}">${_title ? _title : _actionName}</a>
 </li>
