working on pagination

--- a/app/views/CRUD/index.html
+++ b/app/views/CRUD/index.html
@@ -21,7 +21,7 @@
                         </div>
                     </td>
                     <td class="crudNew" >
-                        <a class="btn" href="${type.blankAction}"><i class="icon-plus"></i> &{'crud.index.add', type}</a>
+                        <a class="btn btn-success" href="${type.blankAction}"><i class="icon-plus icon-white"></i> &{'crud.index.add', type}</a>
                     </td>
                 </tr>
             #{/crud.types}
