add twb et jquery javascript

--- a/app/views/CRUD/layout.html
+++ b/app/views/CRUD/layout.html
@@ -18,7 +18,7 @@
 
 
     <!-- these javascript files need to be decalred in the head of the page -->
-    <script type="text/javascript" src="@{'/public/javascripts/jquery-1.7.2.min.js'}"></script>
+    <script type="text/javascript" src="@{'/public/javascripts/jquery-1.9.1.min.js'}"></script>
     <script type="text/javascript" src="@{'/public/datepicker/js/bootstrap-datepicker.js'}"></script>
     <script type="text/javascript" src="@{'/public/datepicker/locales/bootstrap-datepicker.fr.js'}"></script>
 
@@ -51,14 +51,7 @@
 
 </div>
 
-<script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap-dropdown.js'}"></script>
-<script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap-modal.js'}"></script>
-<script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap-transition.js'}"></script>
-<script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap-alert.js'}"></script>
-<script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap-typeahead.js'}"></script>
-<script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap-button.js'}"></script>
-<script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap-tooltip.js'}"></script>
-<script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap-popover.js'}"></script>
+<script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap.min.js'}"></script>
 *{<script type="text/javascript" src="@{'/public/javascripts/application.js'}"></script>}*
 
 </body>
