--- a/app/views/CRUD/layout.html
+++ b/app/views/CRUD/layout.html
@@ -32,8 +32,9 @@
 
 </head>
 <body>
+
 #{include 'crudtb/navbar.html'/}
-#{include 'crudtb/crudNavbar.html'/}
+<!--#{include 'crudtb/crudNavbar.html'/}-->
 
 <div class="container" style="margin-top: 20px">
 
@@ -46,7 +47,7 @@
     <hr>
 
     <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; Company 2013</p>
     </footer>
 
 </div>
