--- a/app/views/crudtb/navbar.html
+++ b/app/views/crudtb/navbar.html
@@ -1,7 +1,5 @@
-<div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="brand" href="@{CRUD.index()}">&{'crud.title'}</a>
-        </div>
+<div class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container" style="width: auto;">
+        <a class="navbar-brand" href="@{CRUD.index()}">&{'crud.title'}</a>
     </div>
 </div>
