--- a/app/views/CRUD/layout.html
+++ b/app/views/CRUD/layout.html
@@ -13,6 +13,7 @@
           href="@{'/public/images/favicon.png'}" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/bootstrap/css/bootstrap.min.css'}"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/bootstrap/css/bootstrap-glyphicons.css'}"/>
     <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/crud.css'}"/>
     <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/datepicker/css/datepicker.css'}"/>
 
@@ -34,14 +35,18 @@
 <body>
 
 #{include 'crudtb/navbar.html'/}
-<!--#{include 'crudtb/crudNavbar.html'/}-->
 
-<div class="container" style="margin-top: 20px">
+<div class="container">
 
     <div id="crud">
-
-        #{doLayout /}
-
+        <div class="row">
+            <div class="col-lg-3">
+                #{include 'crudtb/menu.html'/}
+            </div>
+            <div class="col-lg-9">
+                #{doLayout /}
+            </div>
+        </div>
     </div>
 
     <hr>
@@ -53,7 +58,6 @@
 </div>
 
 <script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap.min.js'}"></script>
-*{<script type="text/javascript" src="@{'/public/javascripts/application.js'}"></script>}*
 
 </body>
 
