--- a/app/views/CRUD/layout.html
+++ b/app/views/CRUD/layout.html
@@ -50,12 +50,9 @@
     </div>
 
     <hr>
-
-    <footer>
-        <p>&copy; Company 2013</p>
-    </footer>
-
 </div>
+
+#{include 'crudtb/footer.html'/}
 
 <script type="text/javascript" src="@{'/public/bootstrap/js/bootstrap.min.js'}"></script>
 
