--- a/public/stylesheets/crud.css
+++ b/public/stylesheets/crud.css
@@ -44,6 +44,60 @@
 }
 
 
+
+/* Footer
+-------------------------------------------------- */
+
+.bs-footer {
+    padding-top: 40px;
+    padding-bottom: 30px;
+    margin-top: 100px;
+    text-align: center;
+    border-top: 1px solid #e5e5e5;
+}
+.bs-footer p {
+    margin-bottom: 0;
+    color: #777;
+}
+.footer-links {
+    margin: 10px 0;
+    padding-left: 0;
+}
+.footer-links li {
+    display: inline;
+    padding: 0 2px;
+}
+.footer-links li:first-child {
+    padding-left: 0;
+}
+
+/* Social proof buttons from GitHub & Twitter */
+.bs-social {
+    margin-bottom: 20px;
+}
+.bs-social-buttons {
+    display: inline-block;
+    margin-bottom: 0;
+    padding-left: 0;
+    list-style: none;
+}
+.bs-social-buttons li {
+    display: inline-block;
+    line-height: 1;
+}
+.bs-social-buttons li + li {
+    margin-left: 15px;
+}
+.bs-social-buttons .twitter-follow-button {
+    width: 225px !important;
+}
+.bs-social-buttons .twitter-share-button {
+    width: 98px !important;
+}
+
+
+
+
 /* Old css
 -------------------------------------------------- */
 
