--- a/app/views/crudtb/navbar.html
+++ b/app/views/crudtb/navbar.html
@@ -1,5 +1,7 @@
-<div class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container" style="width: auto;">
-        <a class="navbar-brand" href="@{CRUD.index()}">&{'crud.title'}</a>
+<header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+    <div class="container">
+        <div class="navbar-header">
+            <a href="@{CRUD.index()}" class="navbar-brand">&{'crud.title'}</a>
+        </div>
     </div>
-</div>
+</header>
