--- a/app/views/CRUD/layout.html
+++ b/app/views/CRUD/layout.html
@@ -28,16 +28,7 @@
 <body>
 
 #{include 'crudtb/navbar.html'/}
-
-<div class="bs-header" id="content">
-    <div class="container">
-        <h1>CSS</h1>
-        <p>Global CSS settings, fundamental HTML elements styled and enhanced with extensible classes, and an advanced grid system.</p>
-        <div id="carbonads-container"><div class="carbonad"><div id="azcarbon"></div><script>var z = document.createElement("script"); z.async = true; z.src = "http://engine.carbonads.com/z/32341/azcarbon_2_1_0_HORIZ"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(z, s);</script></div></div>
-
-    </div>
-</div>
-
+#{include 'crudtb/header.html'/}
 
 <div class="container">
     <div class="row">
