--- a/app/views/CRUD/layout.html
+++ b/app/views/CRUD/layout.html
@@ -29,6 +29,8 @@
 
 #{include 'crudtb/navbar.html'/}
 #{include 'crudtb/header.html'/}
+#{include 'crudtb/alert.html'/}
+
 
 <div class="container">
     <div class="row">
