--- a/app/views/crudtb/header.html
+++ b/app/views/crudtb/header.html
@@ -1,26 +1,47 @@
 
 <div class="bs-header" id="content">
     <div class="container">
-        <h1>
-            #{if request.actionMethod == 'list'}
+        #{if request.actionMethod == 'list'}
+            <h1>
                 &{'crud.list.title', typeDisplayNamePluralize ?: type.name}
-            #{/if}
-            #{elseif request.actionMethod == 'show' || request.actionMethod == 'save' }
-                &{'crud.show.title', typeDisplayName ?: type.modelName}
-            #{/elseif}
-            #{elseif request.actionMethod == 'create' || request.actionMethod == 'blank'}
-                &{'crud.blank.title', typeDisplayName ?: type.modelName}
-            #{/elseif}
-            #{else}
-                &{'crud.index.title'}
-            #{/else}
-        </h1>
-        <!--<p>Global CSS settings, fundamental HTML elements styled and enhanced with extensible classes, and an advanced grid system.</p>-->
-        <div id="carbonads-container">
-            <div class="carbonad">
-                <a class="btn btn-success" href="@{blank()}"><span class="glyphicon glyphicon-plus"></span> &{'crud.add', typeDisplayName ?: type.modelName}</a>
+            </h1>
+            <div id="carbonads-container-list">
+                <div class="carbonad">
+                    <a class="btn btn-success" href="@{blank()}"><span class="glyphicon glyphicon-plus"></span> &{'crud.add', typeDisplayName ?: type.modelName}</a>
+                </div>
             </div>
-        </div>
-
+        #{/if}
+        #{elseif request.actionMethod == 'show' || request.actionMethod == 'save' }
+            <h1>
+                &{'crud.show.title', typeDisplayName ?: type.modelName}
+            </h1>
+            <div id="carbonads-container-show">
+                <div class="carbonad">
+                    #{if !protectionDelete}
+                        #{form @delete(object._key()), class:'inline pull-right', style: 'margin-bottom: 0px'}
+                            <button class="btn btn-danger pull-right" type="submit"><span class="glyphicon glyphicon-trash"></span> &{'crud.delete', typeDisplayName ?: type.modelName}</button>
+                        #{/form}
+                    #{/if}
+                    #{else}
+                        <a class="btn btn-primary pull-right" href="@{list()}"><span class="glyphicon glyphicon-ban-circle"></span> Cancel</a>
+                    #{/else}
+                </div>
+            </div>
+        #{/elseif}
+        #{elseif request.actionMethod == 'create' || request.actionMethod == 'blank'}
+            <h1>
+                &{'crud.blank.title', typeDisplayName ?: type.modelName}
+            </h1>
+            <div id="carbonads-container_create">
+                <div class="carbonad">
+                    <a class="btn btn-primary pull-right" href="@{list()}"><span class="glyphicon glyphicon-ban-circle"></span> Cancel</a>
+                </div>
+            </div>
+        #{/elseif}
+        #{else}
+            <h1>
+                &{'crud.index.title'}
+            </h1>
+        #{/else}
     </div>
 </div>
